<resources>
    <string name="app_name">appMegatecs</string>
    <string name="title_activity_navigation_home">NavigationHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_category">Categorías</string>
    <string name="menu_products">Productos</string>
    <string name="menu_shoppingCart">Carrito de compras</string>
    <string name="menu_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Categorias-->
    <string name="category_screen">Pantallas</string>
    <string name="category_computer">Computadoras</string>
    <string name="category_laptop">Laptops</string>
    <string name="category_print">Impresoras</string>
    <string name="category_component">Componentes</string>
    <string name="category_camera">Cámaras de seguridad</string>


</resources>