<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categorys"
            android:icon="@drawable/ic_apps"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_computer"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_shoppingCart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_shoppingCart" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>
</menu>